# plota-mini-game

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  main.cpp  piece.h  test file  test.txt  time.cpp  time.h  turn.h
Backend/Games/: Board.cpp  Board.h  Checkers.cpp  Checkers.h  Game.cpp  Game.h  Location.h  Piece.cpp  Piece.h  Status.cpp  Status.h  Turn.cpp  Turn.h  board.cpp  board.h  game.h  piece.h
Backend/Games/Checkers/: Checkers.cpp  Checkers.h
Backend/Games/Connect-4/: Connect-4.cpp  Connect-4.h  connect-4.h
Backend/Games/Othello/: Othello.cpp  Othello.h
Backend/Tools/: Time.cpp  Time.h
Client/: Client.pro  widget.cpp  widget.h
Logic/: piece.cpp  turn.h
Plota Login Page/: Hash.cpp  Hash.h
Server/: AuthHandler.cpp  AuthHandler.h  GameServer.cpp  GameServer.h  Server.pro  ServerWindow.cpp  ServerWindow.ui  channels.cpp  channels.h  main.cpp  serverwindow.cpp  serverwindow.h  widget.cpp  widget.h  widget.ui
ui/: checkers.ui  connect4.ui
